--- a/index.html
+++ b/index.html
@@ -564,7 +564,7 @@
 				clearTimeout(timeoutID);
 
 				// Add "On a sunny day," to the beginning of the message
-				var fullMessage = "On a sunny day, the avatar's " + message;
+				var fullMessage = "On a sunny day, the avatar's " + message + "while walking around " + latitude + longitude;
 
 				// Set the text content
 				gestureDiv.textContent = fullMessage;
