--- a/index.html
+++ b/index.html
@@ -554,6 +554,34 @@
 				previousPotValues = potValues.slice(0, numPotentiometers);
 			}
 
+			var cityName;
+
+			// Function to fetch city name using Overpass API
+			function fetchCityName(lat, longi) {
+				// Construct Overpass API query
+				var overpassQuery = "https://overpass-api.de/api/interpreter?data=[out:json];node(around:1000," + latitude + "," + longitude + ");out;";
+
+				// Fetch data from Overpass API
+				fetch(overpassQuery)
+					.then((response) => response.json())
+					.then((data) => {
+						// Process the response to extract city name or other relevant information
+						if (data.elements && data.elements.length > 0) {
+							cityName = data.elements[0].tags["name"];
+							console.log("City:", cityName);
+							// You can do further processing with the city name here
+						} else {
+							console.log("City not found.");
+						}
+					})
+					.catch((error) => {
+						console.error("Error fetching city data:", error);
+					});
+			}
+
+			// Fetch city name based on user's coordinates
+			fetchCityName(latitude, longitude);
+
 			var timeoutID; // Variable to hold the timeout ID
 
 			function displayMovementText(message, x, y) {
