--- a/index.html
+++ b/index.html
@@ -592,7 +592,7 @@
 				clearTimeout(timeoutID);
 
 				// Add "On a sunny day," to the beginning of the message
-				var fullMessage = "On a sunny day, the avatar's " + message + "while walking around " + latitude + longitude;
+				var fullMessage = "On a sunny day, the avatar's " + message + "while walking around " + cityName;
 
 				// Set the text content
 				gestureDiv.textContent = fullMessage;
