--- a/index.html
+++ b/index.html
@@ -148,8 +148,8 @@
 		</script>
 
 		<script>
-			let latitude;
-			let longitude;
+			var latitude;
+			var longitude;
 
 			function getCurrentLocation() {
 				if (navigator.geolocation) {
