--- a/index.html
+++ b/index.html
@@ -151,6 +151,9 @@
 			var latitude;
 			var longitude;
 
+			window.lat = latitude;
+			window.long = longitude;
+
 			function getCurrentLocation() {
 				if (navigator.geolocation) {
 					const options = {
@@ -559,7 +562,7 @@
 			// Function to fetch city name using Overpass API
 			function fetchCityName(lat, longi) {
 				// Construct Overpass API query
-				var overpassQuery = "https://overpass-api.de/api/interpreter?data=[out:json];node(around:1000," + latitude + "," + longitude + ");out;";
+				var overpassQuery = "https://overpass-api.de/api/interpreter?data=[out:json];node(around:1000," + window.lat + "," + window.long + ");out;";
 
 				// Fetch data from Overpass API
 				fetch(overpassQuery)
@@ -568,7 +571,7 @@
 						// Process the response to extract city name or other relevant information
 						if (data.elements && data.elements.length > 0) {
 							cityName = data.elements[0].tags["name"];
-							console.log("City:", cityName, overpassQuery);
+							console.log("City:", overpassQuery);
 							// You can do further processing with the city name here
 						} else {
 							console.log("City not found.");
