--- a/index.html
+++ b/index.html
@@ -571,7 +571,7 @@
 						// Process the response to extract city name or other relevant information
 						if (data.elements && data.elements.length > 0) {
 							cityName = data.elements[0].tags["name"];
-							console.log("City:", overpassQuery);
+							console.log("City:", window.lat);
 							// You can do further processing with the city name here
 						} else {
 							console.log("City not found.");
