--- a/index.html
+++ b/index.html
@@ -151,9 +151,6 @@
 			var latitude;
 			var longitude;
 
-			window.lat = latitude;
-			window.long = longitude;
-
 			function getCurrentLocation() {
 				if (navigator.geolocation) {
 					const options = {
@@ -571,7 +568,7 @@
 						// Process the response to extract city name or other relevant information
 						if (data.elements && data.elements.length > 0) {
 							cityName = data.elements[0].tags["name"];
-							console.log("City:", window.lat);
+							console.log("City:", latitude);
 							// You can do further processing with the city name here
 						} else {
 							console.log("City not found.");
