--- a/index.html
+++ b/index.html
@@ -558,9 +558,10 @@
 
 			// Function to fetch city name using Overpass API
 			function fetchCityName() {
+				var lati = latitude;
+				var long = longitude;
 				// Construct Overpass API query
-				var overpassQuery = "https://overpass-api.de/api/interpreter?data=[out:json];node(around:1000," + latitude + "," + latitude + ");out;";
-
+				var overpassQuery = "https://overpass-api.de/api/interpreter?data=[out:json];node(around:1000," + lati + "," + longi + ");out;";
 				// Fetch data from Overpass API
 				fetch(overpassQuery)
 					.then((response) => response.json())
@@ -568,7 +569,7 @@
 						// Process the response to extract city name or other relevant information
 						if (data.elements && data.elements.length > 0) {
 							cityName = data.elements[0].tags["name"];
-							console.log("City:", latitude, longitude);
+							console.log("City:", lati, longi);
 							// You can do further processing with the city name here
 						} else {
 							console.log("City not found.");
