--- a/index.html
+++ b/index.html
@@ -561,7 +561,7 @@
 				var lati = latitude;
 				var long = longitude;
 				// Construct Overpass API query
-				var overpassQuery = "https://overpass-api.de/api/interpreter?data=[out:json];node(around:1000," + lati + "," + longi + ");out;";
+				var overpassQuery = "https://overpass-api.de/api/interpreter?data=[out:json];node(around:1000," + lati + "," + long + ");out;";
 				// Fetch data from Overpass API
 				fetch(overpassQuery)
 					.then((response) => response.json())
