--- a/index.html
+++ b/index.html
@@ -569,7 +569,7 @@
 						// Process the response to extract city name or other relevant information
 						if (data.elements && data.elements.length > 0) {
 							cityName = data.elements[0].tags["name"];
-							console.log("City:", cityName, , lati, long, overpassQuery);
+							console.log("City:", cityName, lati, long, overpassQuery);
 							// You can do further processing with the city name here
 						} else {
 							console.log("City not found.");
