--- a/index.html
+++ b/index.html
@@ -555,8 +555,8 @@
 			}
 
 			var cityName;
-			let lat = latitude;
-			let long = longitude;
+			var lat = latitude;
+			var long = longitude;
 			// Function to fetch city name using Overpass API
 			function fetchCityName() {
 				// Construct Overpass API query
@@ -568,7 +568,7 @@
 						// Process the response to extract city name or other relevant information
 						if (data.elements && data.elements.length > 0) {
 							cityName = data.elements[0].tags["name"];
-							console.log("City:", cityName, lat, long, overpassQuery);
+							console.log("City:", cityName, lat, long, latitude, longitude, overpassQuery);
 							// You can do further processing with the city name here
 						} else {
 							console.log("City not found.");
