--- a/index.html
+++ b/index.html
@@ -562,6 +562,7 @@
 				return new Promise((resolve, reject) => {
 					const checkCoordinates = () => {
 						if (typeof latitude !== "undefined" && typeof longitude !== "undefined" && latitude !== 0 && longitude !== 0) {
+							console.log(latitude, longitude);
 							resolve();
 						} else {
 							setTimeout(checkCoordinates, 100); // Check again after 100 milliseconds
