--- a/index.html
+++ b/index.html
@@ -589,7 +589,7 @@
 						}
 					})
 					.catch((error) => {
-						console.error("Error fetching city data:", error);
+						console.error("Error fetching city data:", overpassQuery);
 					});
 			}
 
