--- a/index.html
+++ b/index.html
@@ -574,7 +574,7 @@
 					.then(() => {
 						// Construct Overpass API query
 						var overpassQuery = "https://overpass-api.de/api/interpreter?data=[out:json];node(around:1000," + latitude + "," + longitude + ");out;";
-
+						console.log(overpassQuery);
 						// Fetch data from Overpass API
 						return fetch(overpassQuery);
 					})
@@ -589,7 +589,7 @@
 						}
 					})
 					.catch((error) => {
-						console.error("Error fetching city data:", overpassQuery);
+						console.error("Error fetching city data:", error);
 					});
 			}
 
