--- a/index.html
+++ b/index.html
@@ -581,7 +581,7 @@
 					.then((data) => {
 						// Process the response to extract city name or other relevant information
 						if (data.elements && data.elements.length > 0) {
-							var streetName = data.elements[0].tags["addr:street"];
+							var streetName = data.elements[0].tags['addr:street'];
 							console.log("Street:", latitude, longitude, streetName);
 						} else {
 							var streetName = "unknown";
