--- a/index.html
+++ b/index.html
@@ -555,8 +555,6 @@
 			}
 
 			var cityName;
-			var lat = latitude;
-			var long = longitude;
 			// Function to fetch city name using Overpass API
 			function fetchCityName() {
 				return new Promise((resolve, reject) => {
@@ -606,7 +604,7 @@
 				clearTimeout(timeoutID);
 
 				// Add "On a sunny day," to the beginning of the message
-				var fullMessage = "On a sunny day, the avatar's " + message + " while walking around " + latitude + longitude + cityName;
+				var fullMessage = "On a sunny day, the avatar's " + message + " while walking around " + streetName +" street." ;
 
 				// Set the text content
 				gestureDiv.textContent = fullMessage;
