--- a/index.html
+++ b/index.html
@@ -593,7 +593,7 @@
 
 			var timeoutID; // Variable to hold the timeout ID
 
-			function displayMovementText(message, x, y) {
+			async function displayMovementText(message, x, y) {
 				// Target the existing <div> element with the id "gestureDiv"
 				var gestureDiv = document.getElementById("gestureDiv");
 
