--- a/index.html
+++ b/index.html
@@ -602,6 +602,7 @@
 
 				// Clear existing timeout
 				clearTimeout(timeoutID);
+				console.log(streetName);
 
 				// Add "On a sunny day," to the beginning of the message
 				var fullMessage = "On a sunny day, the avatar's " + message + " while walking around " + streetName +" street." ;
