--- a/index.html
+++ b/index.html
@@ -591,33 +591,26 @@
 					});
 			}
 
-			// Fetch city name based on user's coordinates
 			fetchStreetName();
 
 			var timeoutID; // Variable to hold the timeout ID
 			var previousMessage = ""; // Variable to store the previous message
 
-			function displayMovementText(message, x, y) {
+			function displayMovementText(message) {
 				// Target the existing <div> element with the id "gestureDiv"
 				var gestureDiv = document.getElementById("gestureDiv");
 
 				// Clear existing timeout
 				clearTimeout(timeoutID);
+				console.log(streetName);
 
 				// Check if the message has changed
 				if (message !== previousMessage) {
-					console.log(streetName);
 					// Add "On a sunny day," to the beginning of the message
 					var fullMessage = "On a sunny day, the avatar's " + message + " while walking around " + streetName + " street.";
 
 					// Set the text content
 					gestureDiv.textContent = fullMessage;
-
-					// Set a timeout to clear the text after 3 seconds if there's no change
-					timeoutID = setTimeout(function () {
-						gestureDiv.textContent = ""; // Clear the text
-						gestureDiv.style.display = "none"; // Hide the overlay after clearing the text
-					}, 2000);
 
 					// Check if message is not empty to show the overlay
 					if (message.trim() !== "") {
@@ -629,8 +622,13 @@
 					// Update the previous message
 					previousMessage = message;
 				}
-			}
 
+				// Set a timeout to clear the text after 3 seconds if there's no change
+				timeoutID = setTimeout(function () {
+					gestureDiv.textContent = ""; // Clear the text
+					gestureDiv.style.display = "none"; // Hide the overlay after clearing the text
+				}, 3000);
+			}
 
 			function setupColors() {
 				lineColors[0] = color(204, 204, 0); // Dark Yellow
