--- a/index.html
+++ b/index.html
@@ -444,9 +444,9 @@
 				// Displaying movement text based on detected head movement
 				if (headMovingUp != null) {
 					if (headMovingUp) {
-						displayMovementText("head is looking up.", width / 2, height / 2);
+						displayMovementText("head is looking up", width / 2, height / 2);
 					} else {
-						displayMovementText("head is looking down.", width / 2, height / 2);
+						displayMovementText("head is looking down", width / 2, height / 2);
 					}
 				}
 
@@ -461,9 +461,9 @@
 					rightForearmMovingUp == null
 				) {
 					if (leftLegMovingUp) {
-						displayMovementText("left leg is moving up.", width / 2, height / 2 + 40);
+						displayMovementText("left leg is moving up", width / 2, height / 2 + 40);
 					} else {
-						displayMovementText("left leg is moving down.", width / 2, height / 2 + 40);
+						displayMovementText("left leg is moving down", width / 2, height / 2 + 40);
 					}
 				}
 
@@ -478,42 +478,42 @@
 					rightForearmMovingUp == null
 				) {
 					if (rightLegMovingUp) {
-						displayMovementText("right leg is moving up.", width / 2, height / 2 + 80);
+						displayMovementText("right leg is moving up", width / 2, height / 2 + 80);
 					} else {
-						displayMovementText("right leg is moving down.", width / 2, height / 2 + 80);
+						displayMovementText("right leg is moving down", width / 2, height / 2 + 80);
 					}
 				}
 
 				// Displaying movement text based on detected left arm movement
 				if (leftShoulderMovingUp != null && leftForearmMovingUp != null && leftLegMovingUp == null && rightLegMovingUp == null) {
 					if (leftShoulderMovingUp && leftForearmMovingUp) {
-						displayMovementText("left arm is moving up.", width / 2, height / 2 + 120);
+						displayMovementText("left arm is moving up", width / 2, height / 2 + 120);
 					}
 					if (!leftShoulderMovingUp && !leftForearmMovingUp) {
-						displayMovementText("left arm is moving down.", width / 2, height / 2 + 120);
+						displayMovementText("left arm is moving down", width / 2, height / 2 + 120);
 					}
 				}
 
 				// Displaying movement text based on detected right arm movement
 				if (rightShoulderMovingUp != null && rightForearmMovingUp != null && leftLegMovingUp == null && rightLegMovingUp == null) {
 					if (rightShoulderMovingUp && !rightForearmMovingUp) {
-						displayMovementText("right arm is moving up.", width / 2, height / 2 + 160);
+						displayMovementText("right arm is moving up", width / 2, height / 2 + 160);
 					}
 					if (!rightShoulderMovingUp && rightForearmMovingUp) {
-						displayMovementText("right arm is moving down.", width / 2, height / 2 + 160);
+						displayMovementText("right arm is moving down", width / 2, height / 2 + 160);
 					}
 				}
 
 				// Displaying movement text based on detected waist movement
 				if (waistMoving != null && rightLegMovingUp != null && leftLegMovingUp != null) {
 					if (waistMoving) {
-						displayMovementText("waist is moving right.", width / 2, height / 2 + 200);
+						displayMovementText("waist is moving right", width / 2, height / 2 + 200);
 						detectMovement = false;
 						setTimeout(() => {
 							detectMovement = true;
 						}, cooldownDuration);
 					} else {
-						displayMovementText("waist is moving left.", width / 2, height / 2 + 200);
+						displayMovementText("waist is moving left", width / 2, height / 2 + 200);
 						detectMovement = false;
 						setTimeout(() => {
 							detectMovement = true;
@@ -541,13 +541,13 @@
 						setTimeout(() => {
 							detectMovement = true;
 						}, cooldownDuration);
-						displayMovementText("body is moving down.", width / 2, height / 2 + 240);
+						displayMovementText("body is moving down", width / 2, height / 2 + 240);
 					} else {
 						detectMovement = false;
 						setTimeout(() => {
 							detectMovement = true;
 						}, cooldownDuration);
-						displayMovementText("body is moving up.", width / 2, height / 2 + 240);
+						displayMovementText("body is moving up", width / 2, height / 2 + 240);
 					}
 				}
 				// Update previous potentiometer values for the next iteration
@@ -590,8 +590,6 @@
 						console.error("Error fetching city data:", error);
 					});
 			}
-
-			fetchStreetName();
 
 			var timeoutID; // Variable to hold the timeout ID
 			var previousMessage = ""; // Variable to store the previous message
@@ -636,7 +634,6 @@
 					gestureDiv.style.display = "none"; // Hide the overlay after clearing the text
 				}, 3000);
 			}
-
 
 			function setupColors() {
 				lineColors[0] = color(204, 204, 0); // Dark Yellow
