--- a/index.html
+++ b/index.html
@@ -632,7 +632,7 @@
 					} else {
 						// Construct full message using the existing streetName value
 						console.log("old position");
-						var fullMessage = "On a sunny day, the avatar's " + message + " while walking around " + streetName + " street.";
+						var fullMessage = "On a sunny day, the avatar's " + message + " while walking around " + name + " street.";
 
 						// Set the text content
 						gestureDiv.textContent = fullMessage;
