--- a/index.html
+++ b/index.html
@@ -621,6 +621,7 @@
 
 							// Set the text content
 							gestureDiv.textContent = fullMessage;
+							streetName = name;
 
 							// Check if message is not empty to show the overlay
 							if (message.trim() !== "") {
@@ -632,7 +633,7 @@
 					} else {
 						// Construct full message using the existing streetName value
 						console.log("old position");
-						var fullMessage = "On a sunny day, the avatar's " + message + " while walking around " + name + " street.";
+						var fullMessage = "On a sunny day, the avatar's " + message + " while walking around " + streetName + " street.";
 
 						// Set the text content
 						gestureDiv.textContent = fullMessage;
