--- a/index.html
+++ b/index.html
@@ -654,6 +654,42 @@
 				}, 3000);
 			}
 
+			// Define fetchWeather function
+			function fetchWeather() {
+				return new Promise((resolve, reject) => {
+					const apiKey = '21b99074efb73ba35f476f78f1b018ec';
+					const apiUrl = `https://api.openweathermap.org/data/2.5/weather?lat=${latitude}&lon=${longitude}&appid=${apiKey}`;
+
+					// Fetch data from OpenWeather API
+					fetch(apiUrl)
+						.then(response => {
+							if (!response.ok) {
+								throw new Error('Failed to fetch weather data');
+							}
+							return response.json();
+						})
+						.then(data => {
+							// Extract relevant weather information
+							const weatherDescription = data.weather[0].description;
+							const temperature = data.main.temp;
+							const cityName = data.name;
+
+							const weatherData = {
+								description: weatherDescription,
+								temperature: temperature,
+								city: cityName
+							};
+
+							resolve(weatherData);
+							console.log(weatherData);
+						})
+						.catch(error => {
+							console.error('Error fetching weather data:', error);
+							reject(error);
+						});
+				});
+			}
+
 			function setupColors() {
 				lineColors[0] = color(204, 204, 0); // Dark Yellow
 				lineColors[1] = color(204, 204, 0); // Dark Yellow
