Added weather API

--- a/index.html
+++ b/index.html
@@ -690,6 +690,8 @@
 				});
 			}
 
+			fetchWeather();
+
 			function setupColors() {
 				lineColors[0] = color(204, 204, 0); // Dark Yellow
 				lineColors[1] = color(204, 204, 0); // Dark Yellow
