--- a/index.html
+++ b/index.html
@@ -694,7 +694,6 @@
 					};
 
 					return weatherData;
-					console.log(weatherData);
 				})
 				.catch(error => {
 					console.error('Error fetching weather data:', error);
@@ -703,6 +702,13 @@
 			}
 
 			fetchWeather();
+				.then(weatherData => {
+					console.log("Weather Data:", weatherData);
+				})
+				.catch(error => {
+					console.error("Error fetching weather data:", error);
+				});
+
 
 			function setupColors() {
 				lineColors[0] = color(204, 204, 0); // Dark Yellow
