--- a/index.html
+++ b/index.html
@@ -657,7 +657,8 @@
 
 			// Define fetchWeather function
 			function fetchWeather() {
-				return new Promise((resolve, reject) => {
+				// Define a promise to fetch weather data
+				const weatherPromise = new Promise((resolve, reject) => {
 					const checkCoordinates = () => {
 						if (typeof latitude !== "undefined" && typeof longitude !== "undefined" && latitude !== 0 && longitude !== 0) {
 							resolve();
@@ -693,12 +694,18 @@
 						city: cityName
 					};
 
-					return weatherData;
 					console.log("Weather Data:", weatherData);
 				})
 				.catch(error => {
 					console.error('Error fetching weather data:', error);
-					throw error; // Rethrow the error for further handling if needed
+				});
+
+				// Log the weather promise to the console
+				console.log("Fetching weather data...");
+
+				// Use the weather promise elsewhere in your code if needed
+				weatherPromise.then(() => {
+					console.log("Weather data has been fetched.");
 				});
 			}
 
