--- a/index.html
+++ b/index.html
@@ -664,8 +664,9 @@
 			          // Set the text content
 			          gestureDiv.textContent = fullMessage;
 			          // Update streetName
-			          weatherData = weatherData.description;
+			          streetName = name;
 					  //Update weatherData
+					  weatherData = weatherData.description;
 
 			          // Check if message is not empty to show the overlay
 			          if (message.trim() !== "") {
@@ -680,7 +681,7 @@
 			    } else {
 			      // Construct full message using the existing streetName value
 			      console.log("old position");
-			      var fullMessage = "On a " + weatherData + " the avatar's " + message + " while walking around " + streetName + " street.";
+			      var fullMessage = "On a " + weatherData.description + " the avatar's " + message + " while walking around " + streetName + " street.";
 
 			      // Set the text content
 			      gestureDiv.textContent = fullMessage;
