--- a/index.html
+++ b/index.html
@@ -681,7 +681,7 @@
 			    } else {
 			      // Construct full message using the existing streetName value
 			      console.log("old position");
-			      var fullMessage = "On a " + weatherData.description + " the avatar's " + message + " while walking around " + streetName + " street.";
+			      var fullMessage = "On a " + weatherData + " the avatar's " + message + " while walking around " + streetName + " street.";
 
 			      // Set the text content
 			      gestureDiv.textContent = fullMessage;
